# KaWoof

./: .gitignore  Cargo.toml  README.md  Rocket.toml
db/: kawoof.db  users.db
public/: add_create_fields.js  lobby.js  player.js  styles.css
src/: auth.rs  create.rs  get_kawoofs.rs  host_kawoof.rs  join_kawoof.rs  kawoof_manage.rs  main.rs
views/: client_play.html.hbs  create.html  enter_code.html  get_player_name.html.hbs  host_kawoof.html.hbs  index.html  kawoof_details.html.hbs  login.html  my_kawoofs.html.hbs  no_account.html  signup.html
