[package]
name = "kawoof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fallible-iterator = "0.3.0"
rocket = "0.5.0"
cookie = "0.18.1"
rocket-jwt-new = "0.6.0"
jsonwebtoken = "9.3.0"
syn = "2.0.58"
quote = "1.0.35"
serde = {version="1.0.197", features=["derive"]}
sqlx = {version="0.7", features=["runtime-async-std", "tls-rustls", "sqlite", "macros"]}
pwhash = "1"
rocket_dyn_templates = {version="0.1.0", features=["handlebars"]}
